force/src/objects/QA_Patient_Review__c.object
<CustomObject>
    <description>Quality Assurance Reviews of Providers by Patient</description>
    <fields>
        <fullName>Additional_CL_Hx_Perf__c</fullName>
        <label>Additional CL Hx Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Algorithm_Followed__c</fullName>
        <label>Algorithm Followed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <label>Authorization Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signature</fullName>
                    <default>true</default>
                    <label>Signature</label>
                </value>
                <value>
                    <fullName>Covered Contact Lens</fullName>
                </value>
                <value>
                    <fullName>Safety Eyecare Plan</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Exam Plus with Allowance</fullName>
                </value>
                <value>
                    <fullName>Exam Only</fullName>
                </value>
                <value>
                    <fullName>Exam Plus</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Value Exam Only</fullName>
                </value>
                <value>
                    <fullName>Advantage Exam Plus</fullName>
                </value>
                <value>
                    <fullName>Access/Access Indemnity Plan</fullName>
                </value>
                <value>
                    <fullName>Advantage Exam Plus with Allowances</fullName>
                </value>
                <value>
                    <fullName>Choice Exam Plus with Allowance</fullName>
                </value>
                <value>
                    <fullName>Choice Exam Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Binoc_Doc__c</fullName>
        <label>Binoc Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Binoc_Perf__c</fullName>
        <label>Binoc Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Hx_Perf__c</fullName>
        <label>Case Hx Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chart_notes_rendering_doctor_by_initials__c</fullName>
        <label>Chart notes rendering doctor by initials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <label>Claim Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exam</fullName>
                    <default>true</default>
                    <label>Exam</label>
                </value>
                <value>
                    <fullName>Exam and Contact</fullName>
                </value>
                <value>
                    <fullName>Exam, Lens, and Frame</fullName>
                </value>
                <value>
                    <fullName>Exam and Lens</fullName>
                </value>
                <value>
                    <fullName>Exam and Frame</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encrypted>true</encrypted>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_pick__c</fullName>
        <label>Comments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Routine exam, however all tests required for the level of service billed were not performed/documented</fullName>
                </value>
                <value>
                    <fullName>Comp. Exam requires tonometry, either applanation, non-contact or reason why tactile was not performed</fullName>
                </value>
                <value>
                    <fullName>Ophthalmoscopy - C/D ratio not documented</fullName>
                </value>
                <value>
                    <fullName>Medication(s) noted but no condition(s) indicated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corr_VA_Perf__c</fullName>
        <label>Corr VA Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_illnesses_and_medical_conditions__c</fullName>
        <label>Current illnesses and medical conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_medication_allergies_noted__c</fullName>
        <label>Current medication allergies noted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_medications_noted__c</fullName>
        <label>Current medications noted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <label>Date of Service</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diabetes_Present__c</fullName>
        <label>Is Diabetes present at time of exam?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_Suspected__c</fullName>
        <label>Diabetes suspect based on exam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes__c</fullName>
        <label>Diabetes Identified? If yes, CPG Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetic_Retinopathy__c</fullName>
        <label>Is Diabetic Retinopathy documented?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnoses_consistent_with_exam__c</fullName>
        <label>Diagnoses consistent with exam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnosis_Doc__c</fullName>
        <label>Diagnosis Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnosis_Perf__c</fullName>
        <label>Diagnosis Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dilation_Diabetic_Doc__c</fullName>
        <label>Dilation Diabetic Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dilation_Diabetic_Perf__c</fullName>
        <label>Dilation Diabetic Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dilation_Doc__c</fullName>
        <label>Dilation Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dilation_Perf__c</fullName>
        <label>Dilation Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dilation_Performed__c</fullName>
        <label>Is Dilation performed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dilation_Rationale__c</fullName>
        <label>What is the  Dilation Rationale?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient refused</fullName>
                </value>
                <value>
                    <fullName>Patient scheduled dilation later</fullName>
                </value>
                <value>
                    <fullName>Patient under care of Ophthalmologist/Retinal Specialist</fullName>
                </value>
                <value>
                    <fullName>Dilated within last 12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enter_VA_Perf__c</fullName>
        <label>Enter. VA Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_according_to_VSP_guidelines__c</fullName>
        <label>Exam according to VSP guidelines</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_record_have_DOS__c</fullName>
        <label>Exam record and claim have same DOS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ext_Bio_Doc__c</fullName>
        <label>Ext/Bio Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ext_Bio_Perf__c</fullName>
        <label>Ext/Bio Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_1_1_Perf__c</fullName>
        <label>First 1/1 Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Time_Frame__c</fullName>
        <label>Follow-Up Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than ONE month</fullName>
                </value>
                <value>
                    <fullName>ONE to SIX months</fullName>
                </value>
                <value>
                    <fullName>More than SIX months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_care_noted__c</fullName>
        <label>Follow up care noted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GV_Fields_Doc__c</fullName>
        <label>GV Fields Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GV_Fields_Perf__c</fullName>
        <label>GV Fields Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Glaucoma_Diagnosed__c</fullName>
        <label>Glaucoma Diagnosed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Glaucoma_Noted_in_History__c</fullName>
        <label>Glaucoma Noted in History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Glaucoma__c</fullName>
        <label>Glaucoma identified? If yes, CPG Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Cholesterol__c</fullName>
        <label>High Cholesterol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hypertension__c</fullName>
        <label>Hypertension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_no_State_Reason__c</fullName>
        <label>If no State Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Info_noted_is_pertinent_to_patient__c</fullName>
        <label>Info noted is pertinent to patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Mascular_encroachment_1_disc_diameter__c</fullName>
        <label>Is Mascular encroachment 1 disc diameter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_PCP_Communication_Documented__c</fullName>
        <label>Is PCP Communication Documented</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keratometry_Perf__c</fullName>
        <label>Keratometry Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comprehensive</fullName>
                    <default>true</default>
                    <label>Comprehensive</label>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medication_to_Control_IOP__c</fullName>
        <label>Medication to Control IOP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_First_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Member First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Last_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Member Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_MI__c</fullName>
        <encrypted>true</encrypted>
        <label>Member MI</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modify_Glaucoma_Meds__c</fullName>
        <label>Modify Glaucoma Meds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ophthal_Doc__c</fullName>
        <label>Ophthal Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ophthal_Perf__c</fullName>
        <label>Ophthal Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optic_Nerve_Stable__c</fullName>
        <label>Optic Nerve Stable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <label>Other Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Over_Refraction_Perf__c</fullName>
        <label>Over Refraction Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCP_Communication__c</fullName>
        <label>PCP Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Past_medical_history_noted__c</fullName>
        <label>Past medical history noted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <label>Patient Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Patient First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Patient Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_MI__c</fullName>
        <encrypted>true</encrypted>
        <label>Patient MI</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Possible_Points__c</fullName>
        <formula>IF(TEXT(Level__c) = &apos;Comprehensive&apos;, 121, IF(TEXT(Level__c) = &apos;Intermediate&apos;, 105, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Possible Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Review_Status__c</fullName>
        <label>Patient Review Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Score__c</fullName>
        <formula>Patient_Total_Points__c / Patient_Possible_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Patient_Total_Points__c</fullName>
        <formula>IF(ISPICKVAL(Case_Hx_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Subj_Rx_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Corr_VA_Perf__c, &apos;Yes&apos;),2, 0) +
IF(OR(ISPICKVAL(Binoc_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Binoc_Perf__c, &apos;N/A&apos;))),2, 0) +
IF(OR(ISPICKVAL(Binoc_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Binoc_Doc__c, &apos;N/A&apos;))),2, 0) +
IF(ISPICKVAL(Ext_Bio_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Ext_Bio_Doc__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Ophthal_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Ophthal_Doc__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Diagnosis_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Diagnosis_Doc__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Treatment_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Exam_according_to_VSP_guidelines__c, &apos;Yes&apos;),25, 0) +
IF(ISPICKVAL(Past_medical_history_noted__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Current_illnesses_and_medical_conditions__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Current_medications_noted__c, &apos;Yes&apos;),4, 0) +
IF(ISPICKVAL(Current_medication_allergies_noted__c, &apos;Yes&apos;),4, 0) +
IF(ISPICKVAL(Diagnoses_consistent_with_exam__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Treatment_consistent_with_diagnosis__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Follow_up_care_noted__c, &apos;Yes&apos;),0.5, 0) +
IF(ISPICKVAL(Chart_notes_rendering_doctor_by_initials__c, &apos;Yes&apos;),0.5, 0) +     
IF(OR(ISPICKVAL(Were_appropriate_procedures_performed__c, &apos;Yes&apos;),(ISPICKVAL(Were_appropriate_procedures_performed__c, &apos;N/A&apos;))),11, 0) + 
IF(OR(ISPICKVAL(Were_procedures_performed_contact_lens__c, &apos;Yes&apos;),(ISPICKVAL(Were_procedures_performed_contact_lens__c, &apos;N/A&apos;))),10, 0) +

IF(ISPICKVAL(Level__c, &apos;Comprehensive&apos;),
    IF(ISPICKVAL(Enter_VA_Perf__c, &apos;Yes&apos;),2, 0) +
    IF(ISPICKVAL(Pupil_Ref_Perf__c, &apos;Yes&apos;),2, 0) +
    IF(ISPICKVAL(Pupil_Ref_Doc__c, &apos;Yes&apos;),2, 0) + 
    IF(ISPICKVAL(Versions_Perf__c, &apos;Yes&apos;),2, 0) +
    IF(ISPICKVAL(Versions_Doc__c, &apos;Yes&apos;),2, 0) +
    IF(OR(ISPICKVAL(Tonometry_19_over_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Tonometry_19_over_Perf__c, &apos;N/A&apos;))),2, 0) +
    IF(OR(ISPICKVAL(Tonometry_19_over_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Tonometry_19_over_Doc__c, &apos;N/A&apos;))),2, 0) +
    IF(OR(ISPICKVAL(GV_Fields_Perf__c, &apos;Yes&apos;),(ISPICKVAL(GV_Fields_Perf__c, &apos;N/A&apos;))),2, 0) +
    IF(OR(ISPICKVAL(GV_Fields_Doc__c, &apos;Yes&apos;),(ISPICKVAL(GV_Fields_Doc__c, &apos;N/A&apos;))),2, 0) +
    IF(OR(ISPICKVAL(Dilation_Diabetic_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Diabetic_Perf__c, &apos;N/A&apos;))),2, 0) +
    IF(OR(ISPICKVAL(Dilation_Diabetic_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Diabetic_Doc__c, &apos;N/A&apos;))),2, 0),
			0) +
			
IF(ISPICKVAL(Level__c, &apos;Intermediate&apos;),
    IF(OR(ISPICKVAL(Dilation_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Perf__c, &apos;N/A&apos;))),2, 0) +
    IF(OR(ISPICKVAL(Dilation_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Doc__c, &apos;N/A&apos;))),2, 0) +
    IF(ISPICKVAL(Treatment_Doc__c, &apos;Yes&apos;),2, 0),
			0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Total Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_to_return_within_12_months__c</fullName>
        <label>Patient to return within 12 months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That is not a valid Program ID. Use the lookup feature to locate the correct value.</errorMessage>
            <filterItems>
                <field>General_Table__c.Table__c</field>
                <operation>equals</operation>
                <value>PRSP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>General_Table__c</referenceTo>
        <relationshipLabel>QA Patient Reviews</relationshipLabel>
        <relationshipName>QA_Patient_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pt_preferred_language_documented__c</fullName>
        <label>Pt preferred language documented</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pt_refused_interpreter__c</fullName>
        <label>Pt refused interpreter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pt_requested_interpreter__c</fullName>
        <label>Pt requested interpreter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pupil_Ref_Doc__c</fullName>
        <label>Pupil Ref Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pupil_Ref_Perf__c</fullName>
        <label>Pupil Ref Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Review_Number__c</fullName>
        <label>QA Review Number</label>
        <referenceTo>QA_Review__c</referenceTo>
        <relationshipLabel>QA Patient List</relationshipLabel>
        <relationshipName>QA_Patient_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_Glaucoma_Meds__c</fullName>
        <label>Reason for No Glaucoma Meds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_to_Health_Plan_Specialist__c</fullName>
        <label>Referred to Health Plan Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refitting_3_Fields_Perf__c</fullName>
        <label>Refitting (3 Fields) Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>